Closed Bug 486401 Opened 17 years ago Closed 17 years ago

Fix MMGC_MEMORY_PROFILER builds for crashes and enable it

Categories

(Tamarin Graveyard :: Garbage Collection (mmGC), defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: rishah, Unassigned)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.0.8) Gecko/2009032608 Firefox/3.0.8 Build Identifier: MMGC_MEMORY_PROFILER is not enabled for Debug/Debug_Debugger or any of the release builds. We need to enable it for Windows builds. Also, enabling the define results in few crashes for 2 reasons - 1. Invalid usage of MMGC_MEM_TAG and MMGC_MEM_TYPE 2. Typo in VMPI_captureStackTrace implementation for Windows Reproducible: Always Steps to Reproduce: 1. Turn on MMGC_MEMORY_PROFILER in winbuild.h 2. Run any test case Actual Results: Crash Expected Results: No crash.
Made fix for #2 and #1 at couple of places. Need to run buildbot to identify other places, if any.
There's a typo in VMPI_captureStackTrace that's passing bufferSize instead of buffer you'll probably encounter, porting API sanfu...
Summary: Fix MMGC_MEMORY_PROFILER builds for crashes and enable it for Win debug targets → Fix MMGC_MEMORY_PROFILER builds for crashes and enable it
the state of the art right now is enabled for DEBUG builds for mac and all builds for win
Attached patch [v1] patchSplinter Review
Attachment #371743 - Flags: review?(treilly)
#include <execinfo.h> in MMgcPortMac.h is giving compilation errors on buildbot. Locally, i need to explicitly select 10.5 SDK for it to pass. Are you aware of what needs to be changed? If this is not solved then I would turn off memory profiler on Mac because I want to push the patches soon.
Attachment #371743 - Flags: review?(treilly) → review+
Currently we compile against 10.4 for all mac builds except for the 64bit builds (intel and PPC) which is only supported in 10.5. Is this going to be a new requirement that we will no longer be supporting 10.4? The setting of which OSX SDK to use is in configure.py lines 177-191
I believe the answer is yes. execinfo.h is only supported in 10.5 and beyond and it is required for the stack backtrace functionality for profiler.
(In reply to comment #7) > Is this going to be a new requirement that we will no longer be supporting > 10.4? absolutely not! Flash will continue to require 32-bit builds that use the 10.4sdk as it will be a supported platform for a while yet. requiring the 10.5sdk for 32-bit builds is a nonstarter.
Time to commence the FR merge of MMgc into TR, this is fixed there.
Note that we can/should use/assume 10.5 for 64 bit Mac builds.
And iPhone too.
changeset 1732 7caaae3e8cbf Fixes for windows. Leaving the bug open since the Mac SDK issue has not been resolved.
Profiler enabled on Mac in changeset 1761, 8e0de35a8b7e
Status: UNCONFIRMED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: