Fix for bug 486401 -  Fix MMGC_MEMORY_PROFILER builds for crashes and enable it (r=treilly+)