configure.py
@@ -210,6 +210,7 @@ elif the_os == "windows" or the_os == "cygwin":
         APP_CPPFLAGS += "-DWIN32_LEAN_AND_MEAN -D_CONSOLE "
         OS_LIBS.append('winmm')
         OS_LIBS.append('shlwapi')
+        OS_LIBS.append('AdvAPI32')
 elif the_os == "linux":
     MMGC_DEFINES.update({'UNIX': None,
                          'AVMPLUS_UNIX': None,
